# common-voice-eda

./: .gitattributes  .pre-commit-config.yaml  README.md  analysis.ipynb  main.py  pyproject.toml  requirements.txt
data/: train.tsv
